--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -366,4 +366,4 @@ jobs:
           prerelease: false
           fail_on_unmatched_files: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKENFAKE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
