--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -287,17 +287,17 @@ else()
   target_sources(viamsdk PRIVATE rpc/private/viam_rust_utils_stubs.cpp)
 endif()
 
-if (APPLE)
-  target_link_libraries(viamsdk PUBLIC "-framework Security")
-elseif (NOT WIN32)
-  target_link_libraries(viamsdk PRIVATE dl)
-  target_link_libraries(viamsdk PRIVATE rt)
-else()
-  target_link_libraries(viamsdk PRIVATE ncrypt)
-  target_link_libraries(viamsdk PRIVATE secur32)
-  target_link_libraries(viamsdk PRIVATE ntdll)
-  target_link_libraries(viamsdk PRIVATE userenv)
-endif()
+#if (APPLE)
+  #target_link_libraries(viamsdk PUBLIC "-framework Security")
+#elseif (NOT WIN32)
+  #target_link_libraries(viamsdk PRIVATE dl)
+  #target_link_libraries(viamsdk PRIVATE rt)
+#else()
+  #target_link_libraries(viamsdk PRIVATE ncrypt)
+  #target_link_libraries(viamsdk PRIVATE secur32)
+  #target_link_libraries(viamsdk PRIVATE ntdll)
+  #target_link_libraries(viamsdk PRIVATE userenv)
+#endif()
 
 
 install(
