rust-utils always static

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,16 +293,16 @@ else()
     message(WARNING "Currently running on Windows with no rust-utils file. Module code should work as expected, but client code may fail unexpectedly.")
 endif()
 
-if (NOT WIN32) # build `SHARED` on unix-based systems
-  add_library(viam_rust_utils SHARED IMPORTED)
-  target_link_directories(viam_rust_utils
-    INTERFACE
-    "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
-    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>"
-  )
-  set_property(TARGET viam_rust_utils PROPERTY IMPORTED_LOCATION ${viam_rust_utils_file})
+if (NOT WIN32 OR ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") # build `SHARED` on unix-based systems
+  #add_library(viam_rust_utils SHARED IMPORTED)
+  #target_link_directories(viam_rust_utils
+    #INTERFACE
+    #"$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>"
+    #"$<INSTALL_INTERFACE:${CMAKE_INSTALL_LIBDIR}>"
+  #)
+  #set_property(TARGET viam_rust_utils PROPERTY IMPORTED_LOCATION ${viam_rust_utils_file})
 
-elseif (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") # build `STATIC` for windows
+#elseif (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "AMD64") # build `STATIC` for windows
   add_library(viam_rust_utils STATIC IMPORTED)
   target_link_directories(viam_rust_utils
     INTERFACE
