--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,6 @@ jobs:
         uses: andymckay/cancel-action@0.2
         if: steps.release_exists.outputs.id != ''
 
-
-  # CR erodkin: we have (expected) working rust-utils builds now, but need to get that merged.
-  # once it is and we have a new release, try actually testing and delete the TODO.
-  # TODO (RSDK-10638) - uncomment and make all this work once we have good rust-utils windows builds
   build_windows:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
@@ -56,22 +52,6 @@ jobs:
         with:
           ref: ${{ needs.prepare.outputs.sha }}
 
-      - name: Install cmake
-        uses: ssrobins/install-cmake@v1
-        with:
-          version: 3.27.2
-
-      - name: Install python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install Scoop
-        uses: MinoruSekine/setup-scoop@v4.0.1
-
-      - name: install buf 'n stuff
-        run: scoop install buf ninja
-
       - name: Install dependencies
         uses: crazy-max/ghaction-chocolatey@v3
         with:
@@ -83,7 +63,9 @@ jobs:
           Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
           refreshenv
           conan profile detect
-          conan create .
+          conan create . `
+            --build=missing `
+            -o "&:shared=False"
         env:
           CONAN_USER_HOME: c:/cache
           CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
@@ -92,6 +74,7 @@ jobs:
         run: |
           ls
           ls build/
+          tree
 
       - name: Copy
         run: |
