--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -61,15 +61,13 @@ jobs:
 
       - name: Create package
         shell: powershell
-          #conan create . `
-            #--build=missing `
-            #-o "&:shared=False"
         run: |
           Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
           refreshenv
           conan profile detect
-          cmake . --preset conan-default
-          cmake --build --preset=conan-release -j
+          conan create . `
+            --build=missing `
+            -o "&:shared=False"
         env:
           CONAN_USER_HOME: c:/cache
           CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
