--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -293,10 +293,10 @@ elseif (NOT WIN32)
   target_link_libraries(viamsdk PRIVATE dl)
   target_link_libraries(viamsdk PRIVATE rt)
 else()
-  target_link_libraries(viamsdk PRIVATE ncrypt)
-  target_link_libraries(viamsdk PRIVATE secur32)
-  target_link_libraries(viamsdk PRIVATE ntdll)
-  target_link_libraries(viamsdk PRIVATE userenv)
+  target_link_libraries(viamsdk PRIVATE ncrypt.lib)
+  target_link_libraries(viamsdk PRIVATE secur32.lib)
+  target_link_libraries(viamsdk PRIVATE ntdll.lib)
+  target_link_libraries(viamsdk PRIVATE userenv.lib)
 endif()
 
 
