interface not private

--- a/src/viam/sdk/CMakeLists.txt
+++ b/src/viam/sdk/CMakeLists.txt
@@ -293,10 +293,10 @@ elseif (NOT WIN32)
   target_link_libraries(viamsdk PRIVATE dl)
   target_link_libraries(viamsdk PRIVATE rt)
 else()
-  target_link_libraries(viamsdk PRIVATE ncrypt.lib)
-  target_link_libraries(viamsdk PRIVATE secur32.lib)
-  target_link_libraries(viamsdk PRIVATE ntdll.lib)
-  target_link_libraries(viamsdk PRIVATE userenv.lib)
+  target_link_libraries(viamsdk INTERFACE Ncrypt.lib)
+  target_link_libraries(viamsdk INTERFACE Secur32.lib)
+  target_link_libraries(viamsdk INTERFACE Ntdll.lib)
+  target_link_libraries(viamsdk INTERFACE Userenv.lib)
 endif()
 
 
