--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -65,16 +65,10 @@ jobs:
           conan profile detect
           conan install . --output-folder=build-conan --build=missing -o "&:shared=False"
           cmake . --preset conan-default
-          cmake --build --preset=conan-release
+          cmake --build --preset=conan-release --target all install -j 8
         env:
           CONAN_USER_HOME: c:/cache
           CONAN_USER_HOME_SHORT: c:/cache/conan_shortpaths
-
-      - name: list stuff
-        run: |
-          ls
-          ls build/
-          tree
 
       - name: Copy
         run: |
