use ifdef for direct dial

--- a/src/viam/sdk/common/grpc_fwd.hpp.in
+++ b/src/viam/sdk/common/grpc_fwd.hpp.in
@@ -2,6 +2,16 @@
 
 #cmakedefine VIAMCPPSDK_GRPCXX_LEGACY_FWD
 
+// Preprocessor definition for direct dial support in grpc.
+// For grpc >= 1.43.0 it is possible to dial directly over grpc. For older versions,
+// `VIAMCPPSDK_GRPCXX_NO_DIRECT_DIAL` is defined.
+// The default behavior is for the variable to be undefined, providing the behavior for recent
+// versions. If you are experiencing compilation errors in an installed version of the SDK it may be
+// due to a mismatch with the configured version of this header and the grpc version found by the
+// compiler. You may wish to comment/uncomment the define above as needed, or add the definition
+// with `-D` to the compiler.
+#cmakedefine VIAMCPPSDK_GRPCXX_NO_DIRECT_DIAL
+
 // Forward declaration file grpc client and server types.
 // This file provides includes for recent (>= 1.32.0) versions of grpc or older
 // versions, depending on if `VIAMCPPSDK_GRPCXX_LEGACY_FWD` is defined.
