--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -457,7 +457,9 @@ endif()
 
 if (VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.32.0)
   set(VIAMCPPSDK_GRPCXX_LEGACY_FWD 1)
-elseif(VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.43.0)
+endif()
+
+if(VIAMCPPSDK_GRPCXX_VERSION VERSION_LESS 1.43.0)
   set(VIAMCPPSDK_GRPCXX_NO_DIRECT_DIAL 1)
 endif()
 
