--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -40,6 +40,8 @@ jobs:
           github.event_name == 'schedule' &&
           steps.git_info.outputs.current_commit == steps.last_successful_commit.outputs.commit-hash
 
+  # TODO (RSDK-10666) add windows build testing
+
   build_macos:
     if: github.repository_owner == 'viamrobotics'
     needs: [prepare]
