--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ on:
         type: boolean
         description: set to true to build without clang-tidy (2x faster)
 
-# jobs:
+jobs:
 #   test_ubuntu:
 #     if: github.repository_owner == 'viamrobotics'
 #     runs-on: ubuntu-latest
